--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
+    "recharts": "^3.0.2",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
