--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.5.0",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.3",
     "axios": "^1.9.0",
