--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.9.0",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
+    "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
