--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.8",
